# rootfilespec

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  noxfile.py  pyproject.toml  rntuple_reader.py
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml
docs/: conf.py  design.md  index.md
src/: rntuple_reader.py
src/rootfilespec/: __init__.py  buffer.py  container.py  cpptype.py  dispatch.py  dynamic.py  serializable.py  structutil.py
src/rootfilespec/bootstrap/: RAnchor.py  RFrame.py  RLocator.py  RNTuple.py  RNTupleAnchor.py  RNTupleEnvelope.py  RNTupleEnvelopeLink.py  RNTupleFrame.py  RPage.py  TBasket.py  TDatime.py  TDirectory.py  TFile.py  TKey.py  TList.py  TObject.py  TStreamerInfo.py  TString.py  TUUID.py  __init__.py  array.py  assumed.py  compression.py  double32.py  envelopebase.py  envelopes.py  pagelocations.py  streamedobject.py  strings.py  util.py
src/rootfilespec/rntuple/: RFrame.py  RLocator.py  RNTuple.py  RPage.py  __init__.py  envelope.py  footer.py  header.py  pagelist.py  pagelocations.py  schema.py
tests/: test_dataclass_order.py  test_package.py  test_read.py  test_rntuple_hardcoded.py
